Bug 155652 - Scrolling works buggy after resizing okular window
Summary: Scrolling works buggy after resizing okular window
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.6
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-13 16:06 UTC by Vladimir Kuznetsov
Modified: 2008-01-14 17:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vladimir Kuznetsov 2008-01-13 16:06:57 UTC
Version:           0.6 (using KDE 4.00.00 (KDE 4.0.0), Kubuntu packages)
Compiler:          gcc
OS:                Linux (i686) release 2.6.22-14-generic

Steps to reproduce:
1. Open a document (I've tested with pdf and djvu)
2. Zoom in to make only part of the page visible (along x axis)
3. Shrink okular window along x axis

Now you are not able to see rightmost part of the page neither by dragging the page nor by using scrollbar at the bottom.
Comment 1 Pino Toscano 2008-01-13 17:27:43 UTC
Not sure, but it'd look like a Qt problem with scroll areas. Need to investigate.
Comment 2 Pino Toscano 2008-01-14 17:28:47 UTC
This happens with the vertical scrolling as well...
Comment 3 Pino Toscano 2008-01-14 17:29:33 UTC
SVN commit 761349 by pino:

Backport: manually set the scrollbars range, so they are correct when the viewport is resized and the content widget has the same size.

CCBUG: 155652


 M  +3 -0      pageview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=761349
Comment 4 Pino Toscano 2008-01-14 17:29:39 UTC
SVN commit 761348 by pino:

Manually set the scrollbars range, so they are correct when the viewport is resized and the content widget has the same size.

BUG: 155652


 M  +3 -0      pageview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=761348