Manually set the scrollbars range, so they are correct when the viewport is resized and the content widget has the same size.

BUG: 155652

svn path=/trunk/KDE/kdegraphics/okular/; revision=761348